[package]
name = "AdventOfCode"
version = "0.1.0"
authors = ["Vanglant <mikay264@hotmail.com>"]
edition = "2018"

[dependencies]
itertools = "*"
nom = "^4.1"
failure = "0.1.3"
regex = "1"
lazy_static = "1.2.0"
chrono = "0.4"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day1plus"
path = "src/day1plus.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day2plus"
path = "src/day2plus.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day4plus"
path = "src/day4plus.rs"